@@ -1,0 +1,3 @@
+WARNING: empty-object.pdf (object 7 0, file position 575): empty object treated as null
+null
+qpdf: operation succeeded with warnings; resulting file may have some problems
